shows skills by progress bars

--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
             <div class="collapse navbar-collapse" id="myNavbar">
               <ul class="nav navbar-nav">
                 <li><a href="#">Home</a></li>
-                <li><a href="#">Services</a></li> 
-                <li><a href="#">Skills</a></li>
+                <li><a href="#services">Services</a></li> 
+                <li><a href="#skills">Skills</a></li>
                 <li><a href="#">Education</a></li>
                 <li><a href="#">Experience</a></li>
                 <li><a href="#">Achievements</a></li>
@@ -102,7 +102,7 @@
 
     <div class="container">
       <!-- Example row of columns -->
-      <div class="row">
+      <div class="row" id="introduction">
         <div class="col-md-3">
           <img src="img/dp.jpg" class="img-thumbnail img-responsive">
         </div><!-- col -->
@@ -124,7 +124,7 @@
             Email: hello_navneet@hotmail.com
           </p><hr/>
           <div class="row vdivide">
-            <div class="col-md-9">
+            <div class="col-md-7">
               <span>Let's be in touch
                 <ul class="socialicons">
                   <li><a href="http://facebook.com/"><i class="fa fa-facebook"></i></a></li>
@@ -134,24 +134,157 @@
                 </ul>
               </span>
             </div><!-- col -->
-            <div class="col-md-3">
-              <button class="btn btn-success">Hire me</button>
+            <div class="col-md-5">
+              <button class="btn btn-success disabled">Hire me</button>
             </div>
           </div><!-- row -->
         </div><!-- col -->
       </div><!-- row -->
+      <hr/>
+      <div class="row" id="summary">
+        <div class="col-md-12">
+          <h2>Hello There!</h2>
+          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.  It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. </p>
+        </div><!-- col -->
+      </div><!-- row -->
+      <hr/>
+      <div class="row" id="services">
+        <div class="col-md-12">
+          <h2>Services</h2>
+          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.  It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. </p>
+        </div><!-- col -->
+      </div><!-- row -->
+      <hr/>
+      <div class="row" id="skills">
+        <div class="col-md-12">
+          <h2>Skills</h2>
+        </div><!-- col -->
+        <div class="row text-center">
+          <div class="col-md-6">
+            <div class="progress">
+              <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="60"
+              aria-valuemin="0" aria-valuemax="100" style="width:60%">
+                Git and Github
+              </div><!-- progress bar -->
+            </div><!-- progress -->
+            <div class="progress">
+              <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="60"
+              aria-valuemin="0" aria-valuemax="100" style="width:60%">
+                CSS3
+              </div><!-- progress bar -->
+            </div><!-- progress -->
+            <div class="progress">
+              <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="30"
+              aria-valuemin="0" aria-valuemax="100" style="width:30%">
+                AngularJs
+              </div><!-- progress bar -->
+            </div><!-- progress -->
+             <div class="progress">
+              <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="30"
+              aria-valuemin="0" aria-valuemax="100" style="width:30%">
+                WordPress CMS
+              </div><!-- progress bar -->
+            </div><!-- progress -->
+             <div class="progress">
+              <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="30"
+              aria-valuemin="0" aria-valuemax="100" style="width:30%">
+                OpenCart
+              </div><!-- progress bar -->
+            </div><!-- progress -->
+             <div class="progress">
+              <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="30"
+              aria-valuemin="0" aria-valuemax="100" style="width:30%">
+                Node Package Manager (NPM)
+              </div><!-- progress bar -->
+            </div><!-- progress -->
+            <div class="progress">
+              <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="30"
+              aria-valuemin="0" aria-valuemax="100" style="width:30%">
+                PHP
+              </div><!-- progress bar -->
+            </div><!-- progress -->
+            <div class="progress">
+              <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="30"
+              aria-valuemin="0" aria-valuemax="100" style="width:30%">
+                Adobe Photoshop CS6
+              </div><!-- progress bar -->
+            </div><!-- progress -->
+            <div class="progress">
+              <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="30"
+              aria-valuemin="0" aria-valuemax="100" style="width:30%">
+                Core Java
+              </div><!-- progress bar -->
+            </div><!-- progress -->
+          </div><!-- col -->
+          <div class="col-md-6">
+            <div class="progress">
+              <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="75"
+              aria-valuemin="0" aria-valuemax="100" style="width:75%">
+                Bootstrap3
+              </div><!-- progress bar -->
+            </div><!-- progress -->
+            <div class="progress">
+              <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="30"
+              aria-valuemin="0" aria-valuemax="100" style="width:30%">
+                HTML5
+              </div><!-- progress bar -->
+            </div><!-- progress -->
+            <div class="progress">
+              <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="30"
+              aria-valuemin="0" aria-valuemax="100" style="width:30%">
+                JavaScript ES5
+              </div><!-- progress bar -->
+            </div><!-- progress -->
+            <div class="progress">
+              <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="30"
+              aria-valuemin="0" aria-valuemax="100" style="width:30%">
+                SQL Server 2014
+              </div><!-- progress bar -->
+            </div><!-- progress -->
+            <div class="progress">
+              <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="30"
+              aria-valuemin="0" aria-valuemax="100" style="width:30%">
+                MySQL
+              </div><!-- progress bar -->
+            </div><!-- progress -->
+            <div class="progress">
+              <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="30"
+              aria-valuemin="0" aria-valuemax="100" style="width:30%">
+                Firebase
+              </div><!-- progress bar -->
+            </div><!-- progress -->
+            <div class="progress">
+              <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="30"
+              aria-valuemin="0" aria-valuemax="100" style="width:30%">
+                C
+              </div><!-- progress bar -->
+            </div><!-- progress -->
+            <div class="progress">
+              <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="30"
+              aria-valuemin="0" aria-valuemax="100" style="width:30%">
+                C++
+              </div><!-- progress bar -->
+            </div><!-- progress -->
+            <div class="progress">
+              <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="30"
+              aria-valuemin="0" aria-valuemax="100" style="width:30%">
+                Data Structure
+              </div><!-- progress bar -->
+            </div><!-- progress -->
+          </div><!-- col -->
+        </div><!-- row -->
+      </div><!-- row -->
+      <a href="#introduction">Back to top</a>
     </div><!-- container -->
-      <hr>
-
+    <hr>
       <footer class="text-center">
         <div class="container">
           <div class="row">
             <div class="col-md-12">
-              <p>&copy; Company 2015</p>
+              <p>Copyright &copy; Navneet Creations. <br/> All rights reserved &reg;</p>
             </div>
           </div>
-        </div>
-          
+        </div>   
       </footer>
     </div> <!-- /container -->        
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
