--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title></title>
+        <title>Hire the most creative Software Engineer</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
@@ -33,7 +33,7 @@
 
         <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
     </head>
-    <body>
+    <body ng-app="ngPortfolio">
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
@@ -101,7 +101,11 @@
     </div> -->
 
     <div class="container">
-      <!-- Example row of columns -->
+      <!-- EXPERIMENTS HERE -->
+      <div id="demo" ng-controller="servicesCtrl">
+        <pre>{{services | json}}</pre>
+      </div>
+
       <div class="row" id="introduction">
         <div class="col-md-3">
           <img src="img/dp.jpg" class="img-thumbnail img-responsive">
@@ -116,7 +120,6 @@
               <div class="row">
                 <div class="col-md-12 invisible">Empty row</div>
               </div>
-
           <p>I'M NAVNEET PRAKASH<br/>SOFTWARE ENGINEER</p>
           <p>Age: 24<br/>
             Address: WA-112, Gali No. 16, Shakarpur, Delhi-92, New Delhi<br/>
@@ -127,10 +130,10 @@
             <div class="col-md-7">
               <span>Let's be in touch
                 <ul class="socialicons">
-                  <li><a href="http://facebook.com/"><i class="fa fa-facebook"></i></a></li>
-                  <li><a href="http://linkedin.com/"><i class="fa fa-linkedin"></i></a></li>
-                  <li><a href="http://twitter.com/"><i class="fa fa-twitter"></i></a></li>
-                  <li><a href="http://plus.google.com/"><i class="fa fa-google-plus"></i> </a></li>
+                  <li><a href="http://facebook.com/techraiders" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                  <li><a href="https://in.linkedin.com/in/techraiders" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+                  <li class="disabled"><a href="#"><i class="fa fa-twitter" target="_blank"></i></a></li>
+                  <li><a href="http://plus.google.com/" target="_blank"><i class="fa fa-google-plus"></i> </a></li>
                 </ul>
               </span>
             </div><!-- col -->
@@ -139,21 +142,23 @@
             </div>
           </div><!-- row -->
         </div><!-- col -->
-      </div><!-- row -->
+      </div><!-- row introduction-->
       <hr/>
-      <div class="row" id="summary">
+      <div class="row" id="summary" ng-controller="summaryCtrl">
         <div class="col-md-12">
           <h2>Hello There!</h2>
-          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.  It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. </p>
+          <p>{{summary}}</p>
         </div><!-- col -->
-      </div><!-- row -->
+      </div><!-- row summary-->
       <hr/>
-      <div class="row" id="services">
+      <div class="row" id="services" ng-controller="servicesCtrl">
         <div class="col-md-12">
           <h2>Services</h2>
-          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.  It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. </p>
+          <ul ng-repeat="service in services">
+            <li>{{service}}</li>
+          </ul>
         </div><!-- col -->
-      </div><!-- row -->
+      </div><!-- row services-->
       <hr/>
       <div class="row" id="skills">
         <div class="col-md-12">
@@ -273,25 +278,42 @@
             </div><!-- progress -->
           </div><!-- col -->
         </div><!-- row -->
-      </div><!-- row -->
+      </div><!-- row skills progress bars-->
+      <div class="row">
+        <div class="col-md-12">
+          <table class="table table-bordred">
+            <thead>
+              <tr>
+                <th>Course Name</th>
+                <th>Certificate URL</th>
+              </tr>
+            </thead>
+            <tbody ng-controller="trainingsCtrl" >
+              <tr ng-repeat="course in courses">
+                <td>{{course.name}}</td>
+                <td>{{course.certificateURL}}</td>
+              </tr>
+            </tbody>
+          </table>
+        </div><!-- col -->
+      </div><!-- row table-->
+
       <a href="#introduction">Back to top</a>
     </div><!-- container -->
     <hr>
       <footer class="text-center">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-12">
               <p>Copyright &copy; Navneet Creations. <br/> All rights reserved &reg;</p>
-            </div>
-          </div>
         </div>   
-      </footer>
-    </div> <!-- /container -->        
+      </footer>      
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
 
         <script src="js/vendor/bootstrap.min.js"></script>
-
+        
+        
+        <script src="node_modules/angular/angular.min.js" type="text/javascript"></script>
+        <script src="scripts/app.js"></script>
+        <script src="components/portfolio.ctr.js" type="text/javascript"></script>
         <script src="js/main.js"></script>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
