--- a/index.html
+++ b/index.html
@@ -37,48 +37,39 @@
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-      <div class="container">
+    <nav class="navbar navbar-default navbar-fixed-top hidden-sm hidden-xs" role="navigation">
+      <div class="container-fluid">
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+          <a class="navbar-brand" href="#">Portfolio</a>
+          <p class="navbar-text"></p>
+        </div>
+      </div>
+    </nav>
+    <div class="container">  
+      <nav class="navbar navbar-default">
+         <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsemenu" aria-expanded="false">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Portfolio</a>
-        </div>
-      </div>
-    </nav>
-    <div class="container">
-      <div class="row no-gutter">
-        <div class="col-md-9">
-          <nav class="navbar navbar-default">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span> 
-            </button>
-            <div class="collapse navbar-collapse" id="myNavbar">
-              <ul class="nav navbar-nav">
-                <li><a href="#">Home</a></li>
-                <li><a href="#services">Services</a></li> 
-                <li><a href="#skills">Skills</a></li>
-                <li><a href="#">Education</a></li>
-                <li><a href="#">Experience</a></li>
-                <li><a href="#">Achievements</a></li>
-                <li class="disabled"><a href="#">Portfolio</a></li>
-                <li><a href="#">Calendar</a></li>
-                <li><a href="#">Contact</a></li>
-              </ul>
-            </div>
-          </nav>
-        </div> <!-- col -->
-        <div class="col-md-3">
-          <form class="form-inline" role="search">
+        </div> <!-- navbar-header -->
+        <div class="collapse navbar-collapse" id="collapsemenu">
+          <ul class="nav navbar-nav">
+            <li><a href="#">Services</a></li>
+            <li><a href="#">Skills</a></li>
+            <li><a href="#">Education</a></li>
+            <li><a href="#">Experience</a></li>
+            <li><a href="#">Achievements</a></li>
+            <li><a href="#">Projects</a></li>
+            <li><a href="#">Calendar</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+          <form class="form-inline navbar-right" role="search">
             <div class="form-group">
               <div class="input-group">
-                <input type="text" class="pull-right form-control" placeholder="Search" id="searchbar">
+                <input type="text" class="form-control" placeholder="Search" id="searchbar">
                 <span class="input-group-btn">
                   <button class="btn btn-default" type="button">
                     <span class="glyphicon glyphicon-search"></span>
@@ -87,25 +78,12 @@
               </div> <!-- input group -->
             </div> <!-- form group -->
           </form>
-        </div><!-- col -->
-      </div><!-- row -->
-    </div><!-- container -->
-
-    <!-- Main jumbotron for a primary marketing message or call to action -->
-    <!-- <div class="jumbotron">
-      <div class="container">
-        <h1>Hello, world!</h1>
-        <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-        <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
-      </div>
-    </div> -->
+        </div> <!-- collapse menu --> 
+      </nav>  
+    </div><!-- collapse menu container -->
 
     <div class="container">
       <!-- EXPERIMENTS HERE -->
-      <div id="demo" ng-controller="servicesCtrl">
-        <pre>{{services | json}}</pre>
-      </div>
-
       <div class="row" id="introduction">
         <div class="col-md-3">
           <img src="img/dp.jpg" class="img-thumbnail img-responsive">
@@ -133,12 +111,12 @@
                   <li><a href="http://facebook.com/techraiders" target="_blank"><i class="fa fa-facebook"></i></a></li>
                   <li><a href="https://in.linkedin.com/in/techraiders" target="_blank"><i class="fa fa-linkedin"></i></a></li>
                   <li class="disabled"><a href="#"><i class="fa fa-twitter" target="_blank"></i></a></li>
-                  <li><a href="http://plus.google.com/" target="_blank"><i class="fa fa-google-plus"></i> </a></li>
+                  <li class="disabled"><a href="#" target="_blank"><i class="fa fa-google-plus"></i> </a></li>
                 </ul>
               </span>
             </div><!-- col -->
             <div class="col-md-5">
-              <button class="btn btn-success disabled">Hire me</button>
+              <button class="btn btn-success">Hire me</button>
             </div>
           </div><!-- row -->
         </div><!-- col -->
@@ -160,128 +138,72 @@
         </div><!-- col -->
       </div><!-- row services-->
       <hr/>
-      <div class="row" id="skills">
+      <div class="row">
         <div class="col-md-12">
           <h2>Skills</h2>
         </div><!-- col -->
-        <div class="row text-center">
-          <div class="col-md-6">
-            <div class="progress">
-              <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="60"
-              aria-valuemin="0" aria-valuemax="100" style="width:60%">
-                Git and Github
+        <div class="row text-center" ng-controller="skillsCtrl">
+          <div class="col-md-4">
+            <div class="progress" ng-repeat="skill in skills.slice(0,6)">
+              <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="{{skill.status}}"
+              aria-valuemin="0" aria-valuemax="100" style="width:{{skill.status}}">
+                {{skill.name}}
               </div><!-- progress bar -->
-            </div><!-- progress -->
-            <div class="progress">
-              <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="60"
-              aria-valuemin="0" aria-valuemax="100" style="width:60%">
-                CSS3
-              </div><!-- progress bar -->
-            </div><!-- progress -->
-            <div class="progress">
-              <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="30"
-              aria-valuemin="0" aria-valuemax="100" style="width:30%">
-                AngularJs
-              </div><!-- progress bar -->
-            </div><!-- progress -->
-             <div class="progress">
-              <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="30"
-              aria-valuemin="0" aria-valuemax="100" style="width:30%">
-                WordPress CMS
-              </div><!-- progress bar -->
-            </div><!-- progress -->
-             <div class="progress">
-              <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="30"
-              aria-valuemin="0" aria-valuemax="100" style="width:30%">
-                OpenCart
-              </div><!-- progress bar -->
-            </div><!-- progress -->
-             <div class="progress">
-              <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="30"
-              aria-valuemin="0" aria-valuemax="100" style="width:30%">
-                Node Package Manager (NPM)
-              </div><!-- progress bar -->
-            </div><!-- progress -->
-            <div class="progress">
-              <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="30"
-              aria-valuemin="0" aria-valuemax="100" style="width:30%">
-                PHP
-              </div><!-- progress bar -->
-            </div><!-- progress -->
-            <div class="progress">
-              <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="30"
-              aria-valuemin="0" aria-valuemax="100" style="width:30%">
-                Adobe Photoshop CS6
-              </div><!-- progress bar -->
-            </div><!-- progress -->
-            <div class="progress">
-              <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="30"
-              aria-valuemin="0" aria-valuemax="100" style="width:30%">
-                Core Java
+            </div><!-- progress -->  
+          </div><!-- col -->
+          <div class="col-md-4">
+            <div class="progress" ng-repeat="skill in skills.slice(7,13)">
+              <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="{{skill.status}}"
+              aria-valuemin="0" aria-valuemax="100" style="width:{{skill.status}}">
+                {{skill.name}}
               </div><!-- progress bar -->
             </div><!-- progress -->
           </div><!-- col -->
-          <div class="col-md-6">
-            <div class="progress">
-              <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="75"
-              aria-valuemin="0" aria-valuemax="100" style="width:75%">
-                Bootstrap3
+          <div class="col-md-4">
+            <div class="progress" ng-repeat="skill in skills.slice(14,20)">
+              <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="{{skill.status}}"
+              aria-valuemin="0" aria-valuemax="100" style="width:{{skill.status}}">
+                {{skill.name}}
               </div><!-- progress bar -->
             </div><!-- progress -->
-            <div class="progress">
-              <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="30"
-              aria-valuemin="0" aria-valuemax="100" style="width:30%">
-                HTML5
-              </div><!-- progress bar -->
-            </div><!-- progress -->
-            <div class="progress">
-              <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="30"
-              aria-valuemin="0" aria-valuemax="100" style="width:30%">
-                JavaScript ES5
-              </div><!-- progress bar -->
-            </div><!-- progress -->
-            <div class="progress">
-              <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="30"
-              aria-valuemin="0" aria-valuemax="100" style="width:30%">
-                SQL Server 2014
-              </div><!-- progress bar -->
-            </div><!-- progress -->
-            <div class="progress">
-              <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="30"
-              aria-valuemin="0" aria-valuemax="100" style="width:30%">
-                MySQL
-              </div><!-- progress bar -->
-            </div><!-- progress -->
-            <div class="progress">
-              <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="30"
-              aria-valuemin="0" aria-valuemax="100" style="width:30%">
-                Firebase
-              </div><!-- progress bar -->
-            </div><!-- progress -->
-            <div class="progress">
-              <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="30"
-              aria-valuemin="0" aria-valuemax="100" style="width:30%">
-                C
-              </div><!-- progress bar -->
-            </div><!-- progress -->
-            <div class="progress">
-              <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="30"
-              aria-valuemin="0" aria-valuemax="100" style="width:30%">
-                C++
-              </div><!-- progress bar -->
-            </div><!-- progress -->
-            <div class="progress">
-              <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="30"
-              aria-valuemin="0" aria-valuemax="100" style="width:30%">
-                Data Structure
-              </div><!-- progress bar -->
-            </div><!-- progress -->
-          </div><!-- col -->
+          </div> <!-- col -->
         </div><!-- row -->
       </div><!-- row skills progress bars-->
+      <hr/>
+      <!-- education section -->
       <div class="row">
         <div class="col-md-12">
-          <table class="table table-bordred">
+            <div ng-controller="educationCtrl">
+            <h2>Education</h2>
+            <table class="table table-bordered">
+              <thead>
+                <tr>
+                  <th>Degree</th>
+                  <th>University</th>
+                  <th>Institute</th>
+                  <th>Year of Passing</th>
+                  <th>Percentage</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr ng-repeat="education in educations">
+                  <td>{{education.degree}}</td>
+                  <td>{{education.university}}</td>
+                  <td>{{education.institute}}</td>
+                  <td>{{education.yop}}</td>
+                  <td>{{education.percentage}}</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+      <hr/>
+      <!-- trainings section -->
+      <div class="row">
+        <div class="col-md-12">
+        <h2>Online Trainings Taken</h2>
+          <table class="table table-bordered">
             <thead>
               <tr>
                 <th>Course Name</th>
