Facilitates contact form UI

--- a/ui_components/navbar.html
+++ b/ui_components/navbar.html
@@ -25,7 +25,7 @@
   <li><a class="w3-padding-16" href="#">Link 1</a></li>
   <li><a class="w3-padding-16" href="#">Link 2</a></li>
   <li><a class="w3-padding-16" href="#">Link 3</a></li>
-  <li class="w3-navitem"><input type="text" class="w3-input w3-border-0" placeholder="Search.."></li>
+  <li class="w3-navitem"><input type="search" class="w3-input w3-border-0" placeholder="Search.."></li>
   </ul>
 </div>
 
